[package]
name = "wx-api"
version = "0.1.0"
authors = ["Rob Hurkes <rhurkes@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = "0.4"
failure = "0.1.5"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.4"
toml = "0.4"
wx = { git = "https://github.com/rhurkes/wx-shared" }
zmq = "0.9"
